config/kubernetes/k8s/canton-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canton-node
  labels:
    name: canton-node
    app: canton-validator
    environment: production
