config/kubernetes/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canton-otc
  labels:
    name: canton-otc
    app: canton-otc-exchange
